<resources>
    <string name="app_name">Ecomerce_Project</string>
    <!-- TODO: Remove or change this placeholder text -->

    //auth
    <string name="administratiom">Administration</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="f_pass">Forget password ?</string>
    <string name="signin">Sign In</string>
    <string name="c_n_a">create New Account ?</string>

    <string name="signup">Sign Up</string>
    <string name="first_name_hint">First name</string>
    <string name="forget_password">Forget password?</string>
    <string name="last_name_hint">Last name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="signup_btn">Sign Up</string>


    <string name="product_name">Product name !!</string>
    <string name="price">Price</string>
    <string name="images">Images</string>
    <string name="sizes">Sizes</string>
    <string name="size">Size</string>
    <string name="colors">Colors</string>
    <string name="brand">Brand</string>
    <string name="type">Type</string>
    <string name="desc">Description</string>


    <string name="admin_dashboard_products">Products</string>
    <string name="no_products_found">Oops! No products found.</string>
    <string name="unknown_problem">Oops! Something went wrong.</string>

    <string name="see_more">See more</string>


    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="home_title">Home</string>
    <string name="profile_title">Profile</string>
    <string name="cart_title">Cart</string>
    <string name="favorite_title">Favorite</string>


    <string name="image_url_hint">Image URL</string>

    <string name="color_name_hint">Color Name</string>
    <string name="hex_code_hint">Hex Code</string>

    <string name="invalid_hex_code">Invalid hex code</string>
    <string name="provide_valid_url">Provide valid URL</string>
    <string name="quantity">Quantity</string>
    <string name="moroccan_dirham_acronym">MAD</string>

    <string name="free_delivery">Free Delivery</string>


    <string name="t_shirt">T-shirt</string>
    <string name="dress">Dress</string>
    <string name="hoodie">Hoodie</string>
    <string name="promotion">Promotion</string>
    <string name="logout">Log Out</string>
    <string name="phone">Phone\n</string>


</resources>