<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.admin.AdminProductControl"
    android:theme="@style/AdminThem"
    android:background="@drawable/admina_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:padding="20dp"
        >
        <TextView
            android:id="@+id/admin_controle_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="35sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/admin_controle_product_main_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/livreuse"/>


        <include layout="@layout/edit_button" android:id="@+id/admin_controle_edit_product_main_image"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">


            <TextView
                android:id="@id/admin_controle_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15644 £ "
                android:paddingStart="10dp"
                android:textStyle="italic"
                android:layout_weight="1"/>

            <include layout="@layout/edit_button" android:id="@+id/admin_controle_edit_product_price"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/images"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/admin_controle_product_rv_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"/>
        <include layout="@layout/edit_button" android:id="@+id/admin_controle_edit_product_images"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sizes"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/admin_controle_product_rv_sizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"/>
        <include layout="@layout/edit_button" android:id="@+id/admin_controle_edit_product_sizes"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colors"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/admin_controle_product_rv_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:layout_marginBottom="20dp"/>
        <include layout="@layout/edit_button" android:id="@+id/admin_controle_edit_product_colors"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@id/admin_controle_img_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/delete_ic"
                />

            <TextView
                android:id="@id/admin_controle_tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="nike "
                android:paddingStart="10dp"
                android:textStyle="italic"
                android:layout_weight="1"/>

        <include layout="@layout/edit_button" android:id="@+id/admin_controle_edit_product_brand"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@id/admin_controle_img_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/delete_ic"
                />

            <TextView
                android:id="@id/admin_controle_img_type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="nike "
                android:paddingStart="10dp"
                android:textStyle="italic"
                android:layout_weight="1"/>

            <include layout="@layout/edit_button" android:id="@+id/admin_controle_edit_product_type"/>
        </LinearLayout>





    </LinearLayout>





</ScrollView>